<resources xmlns:xliff="http://schemas.android.com/tools">

    <!--App Bar Titles-->
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_movie_detail">Movie Details</string>

    <!--<Action Bar Items-->
    <string name="action_favorite">Favorite</string>
    <string name="action_share">Share</string>

    <!--Spinner for sorting-->
    <string name="action_sort">Sort</string>

    <!--Sorting spinner dropdown options-->
    <string name="popular_sort">Most Popular</string>
    <string name="ratings_sort">Best Rated</string>
    <string name="favorites_sort">Favorites</string>

    <!--Movie Detail textviews-->
    <string name="movie_title">Title</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="release_date_title">Released:</string>
    <string name="release_date_content">Release Date</string>
    <string name="movie_rating_title">Rating:</string>
    <string name="movie_rating_content">Rating</string>
    <string name="movie_description_content">Description</string>

    <!--Format for printing out the movie rating i.e. 7.50/10-->
    <string name="movie_rating_fraction"><xliff:g>%.2f</xliff:g>/10</string>

    <string name="content_authority">com.example.android.popularmovies</string>
    <string name="movie_trailers_title">MOVIE TRAILERS</string>
    <string name="movie_details_title">DETAILS</string>
    <string name="movie_reviews_title">USER REVIEWS</string>

    <!--Trailer image-->
    <string name="trailer_thumbnail">Trailer thumbnail</string>
    <string name="play_icon">Play icon</string>


</resources>
